substrate/frame/support/test/tests/construct_runtime_ui/invalid_module_details_keyword.stderr
error: expected one of: `Pallet`, `Call`, `Storage`, `Event`, `Error`, `Config`, `Origin`, `Inherent`, `ValidateUnsigned`, `FreezeReason`, `HoldReason`, `LockId`, `SlashReason`
  --> tests/construct_runtime_ui/invalid_module_details_keyword.rs:23:20
   |
23 |         system: System::{enum},
   |                          ^^^^
